checkout/static/techtracking.css
/* Utility classes */

.no-padding {
    padding: 0;
}

/* Bootstrap overrides */

.table > tbody > tr > th {
    vertical-align: middle;
}

.navbar-brand > svg {
    margin: -15px 20px 0 0;
    float: left;
}

/* Custom classes */

.body {
    margin-top: 75px;
}

.user-info {
    padding: 3px 20px;
    white-space:nowrap;
}

.user-info-label {
    font-size: 12px;
    font-weight: 700;
    color: #959595;
    text-transform: uppercase;
    letter-spacing: 1px;
    content: "Example";
}

.reservation {
    line-height: 1;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0.25em;
    background-color: #dddddd;
    margin: 0 0 5px 0;
    color: #000;
}

.reservation a:hover {
    text-decoration: none;
}

.reserve {
    margin: -9px -9px 5px -9px;
}

.reserve-button {
    opacity: 0.5;
}

.reserve-button:hover {
    opacity: 1;
}

.sku-reservation {
    padding: 4px 5px 5px 5px;
}

.table-cell {
    display: block;
    min-height: 80px;
    width: 100%;
}

.table-cell-today {
    background-color: #f3fffa;
}

.sku-room {
    min-width: 35px;
    display: inline-block;
}

.sku-units {
    min-width: 25px;
    display: inline-block;
}

.modal .form-group {
    margin-bottom: 0;
}

